# Social-media-app

./: CMakeLists.txt  main.cpp
Data/: repo_friendship.txt  repo_messages.txt  repo_users.txt
Entities/: Entity.h  friendship.h  message.h  user.h
Exception/: Exeption.h
Repo/: repo_file.h  repo_friendship.cpp  repo_friendship.h  repo_messages.cpp  repo_messages.h  repo_users.cpp  repo_users.h
Service/: friendship_service.cpp  friendship_service.h  message_service.cpp  message_service.h  user_service.cpp  user_service.h
Template/: multimap.cpp  multimap.h  set.cpp  set.h
Tests/: test.cpp  test.h
UI/: UI.cpp  UI.h
